--- a/src/ClienteChat.form
+++ b/src/ClienteChat.form
@@ -1,49 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ClienteChat">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="10" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="10" y="20" width="1136" height="530"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="95639" class="javax.swing.JLabel" binding="chatLabel">
+      <component id="db66b" class="javax.swing.JButton" binding="cerrarButton">
         <constraints>
-          <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="689" height="30"/>
+            <maximum-size width="100" height="100"/>
+          </grid>
         </constraints>
         <properties>
-          <font name="Monaco" size="14" style="1"/>
-          <text value="Mensaje:"/>
+          <label value="Cerrar"/>
+          <text value="Cerrar"/>
+          <verticalAlignment value="0"/>
         </properties>
       </component>
-      <component id="250fe" class="javax.swing.JTextField" binding="mensajeField">
+      <component id="eb2f4" class="javax.swing.JLabel">
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="59" height="61"/>
+          </grid>
+        </constraints>
+        <properties>
+          <opaque value="true"/>
+          <text value="Direccion"/>
+        </properties>
+      </component>
+      <component id="b800f" class="javax.swing.JTextField" binding="direcField">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="8" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="345" height="61"/>
+            <maximum-size width="140" height="30"/>
           </grid>
         </constraints>
         <properties/>
       </component>
-      <component id="db66b" class="javax.swing.JButton" binding="enviarButton" default-binding="true">
+      <component id="1dd40" class="javax.swing.JButton" binding="enviarButton">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="8" column="1" row-span="1" col-span="6" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="689" height="30"/>
             <maximum-size width="100" height="100"/>
           </grid>
         </constraints>
         <properties>
+          <actionCommand value="Button"/>
+          <label value="Enviar"/>
           <text value="Enviar"/>
-          <verticalAlignment value="0"/>
         </properties>
       </component>
-      <component id="fcc38" class="javax.swing.JButton" binding="cerrarButton" default-binding="true">
+      <component id="2f873" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <maximum-size width="100" height="100"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Puerto"/>
+        </properties>
+      </component>
+      <component id="136af" class="javax.swing.JTextField" binding="portField">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="1" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="689" height="30"/>
+            <maximum-size width="140" height="30"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="95639" class="javax.swing.JLabel" binding="chatLabel">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="15" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <alignmentY value="1.0"/>
+          <font name="Monaco" size="14" style="1"/>
+          <text value="Chat:"/>
+        </properties>
+      </component>
+      <component id="4cdd" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="NickName"/>
+        </properties>
+      </component>
+      <component id="8c992" class="javax.swing.JTextField" binding="nickField">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="689" height="30"/>
+            <maximum-size width="140" height="30"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="89aa9" class="javax.swing.JButton" binding="conectarButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Conectar"/>
+        </properties>
+      </component>
+      <component id="8e0d2" class="javax.swing.JTextField" binding="mensajeField">
+        <constraints>
+          <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="-1"/>
+            <maximum-size width="200" height="30"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <component id="55ef9" class="javax.swing.JTextArea" binding="textArea">
+        <constraints>
+          <grid row="4" column="2" row-span="3" col-span="4" vsize-policy="6" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="250"/>
+            <maximum-size width="400" height="350"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Cerrar"/>
+          <caretColor color="-6767757"/>
+          <editable value="false"/>
+          <text value=""/>
         </properties>
       </component>
     </children>
