--- a/src/ClienteChat.form
+++ b/src/ClienteChat.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ClienteChat">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="12" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="11" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="10" y="20" width="1681" height="620"/>
@@ -10,7 +10,7 @@
     <children>
       <component id="95639" class="javax.swing.JLabel" binding="chatLabel">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="10" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="10" use-parent-layout="false"/>
         </constraints>
         <properties>
           <alignmentY value="1.0"/>
@@ -22,7 +22,7 @@
       </component>
       <component id="8e0d2" class="javax.swing.JTextField" binding="mensajeField">
         <constraints>
-          <grid row="9" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="4" use-parent-layout="false">
+          <grid row="8" column="1" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="4" use-parent-layout="false">
             <preferred-size width="275" height="-1"/>
             <maximum-size width="275" height="30"/>
           </grid>
@@ -31,7 +31,7 @@
       </component>
       <component id="7bef2" class="javax.swing.JLabel" binding="msjLabel">
         <constraints>
-          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="10" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="10" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font name="Bodoni MT Black" size="16" style="1"/>
@@ -41,7 +41,7 @@
       </component>
       <component id="55ef9" class="javax.swing.JTextArea" binding="textArea">
         <constraints>
-          <grid row="6" column="2" row-span="3" col-span="3" vsize-policy="6" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="2" row-span="3" col-span="3" vsize-policy="6" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="300" height="250"/>
             <maximum-size width="400" height="350"/>
           </grid>
@@ -54,7 +54,7 @@
       </component>
       <component id="1dd40" class="javax.swing.JButton" binding="enviarButton">
         <constraints>
-          <grid row="10" column="1" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="9" column="1" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="689" height="30"/>
             <maximum-size width="100" height="100"/>
           </grid>
@@ -67,7 +67,7 @@
       </component>
       <component id="db66b" class="javax.swing.JButton" binding="cerrarButton">
         <constraints>
-          <grid row="11" column="1" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="10" column="1" row-span="1" col-span="10" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="689" height="30"/>
             <maximum-size width="100" height="100"/>
           </grid>
@@ -85,8 +85,8 @@
         <properties>
           <background color="-16731575"/>
           <font name="Algerian" size="22" style="1"/>
-          <foreground color="-16731575"/>
-          <text value="Angel Live Messenger"/>
+          <foreground color="-211953"/>
+          <text value="Conexión Server"/>
         </properties>
       </component>
       <component id="136af" class="javax.swing.JTextField" binding="portField">
@@ -107,23 +107,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="d5194" class="javax.swing.JLabel" binding="ipCliLab">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="IP"/>
-        </properties>
-      </component>
-      <component id="f485" class="javax.swing.JTextField" binding="ipCliTextField">
-        <constraints>
-          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-            <maximum-size width="140" height="30"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="89aa9" class="javax.swing.JButton" binding="conectarButton" default-binding="true">
         <constraints>
           <grid row="3" column="2" row-span="1" col-span="8" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="3" use-parent-layout="false"/>
@@ -134,7 +117,7 @@
       </component>
       <component id="4cdd" class="javax.swing.JLabel" binding="nickLabel">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="NickName"/>
@@ -142,7 +125,7 @@
       </component>
       <component id="8c992" class="javax.swing.JTextField" binding="nickField">
         <constraints>
-          <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="689" height="30"/>
             <maximum-size width="140" height="30"/>
           </grid>
